[package]
name = "utsuho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.1", features = ["derive"] }
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["socks"] }
xmu-health-report-rust-sdk = { git = "https://github.com/kirainmoe/auto-daily-health-report" }